<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/workout_name" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Workout field -->
            <EditText
                android:id="@+id/edit_workout_name"
                style="@style/EditorFieldStyle"
                android:hint="Workout Name"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/date" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Date input field -->
            <EditText
                android:id="@+id/edit_date_input"
                style="@style/EditorFieldStyle"
                android:hint="@string/date_format"
                android:focusable="false"
                android:inputType="date" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/distance" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Distance field -->
            <EditText
                android:id="@+id/edit_distance"
                style="@style/EditorFieldStyle"
                android:hint="Enter Distance"
                android:inputType="number" />

            <!-- Units for weight (km) -->
            <TextView
                android:id="@+id/label_weight_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/distance_unit" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Time Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="Time:" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Time input field -->
            <EditText
                android:id="@+id/edit_time"
                style="@style/EditorFieldStyle"
                android:hint="Enter Time as (10m/1h)"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!-- Completion category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/completion" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Completion drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_completion"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>


